删除部分内容